@@ -1,3 +1,9 @@
+2009-12-16  Andoni Morales Alastruey  <amorales@flumotion.com>
+
+	* flumotion/component/consumers/httpfragstreamer/httpfragstreamer.py:
+	* flumotion/component/consumers/httpfragstreamer/resources.py:
+	Fix bytes sent/received calculation 
+
 2009-12-16  Marc-André Lureau  <mlureau@flumotion.com>
 
 	* Makefile.am:
